--- a/website/index.html
+++ b/website/index.html
@@ -6,6 +6,8 @@
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-    sdsds
+    <p>
+        HOW U DOING BITCH
+    </p>
 </body>
 </html>
