Wat dingen gedaan

--- a/website/index.html
+++ b/website/index.html
@@ -15,7 +15,7 @@
 <body>
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">Logo</a>
+      <a id="logo-container"><img class="img-logo" src="images/nijlgans.png"></a>
       <ul class="right hide-on-med-and-down">
         <li><a class="navbar-link" href="#">Navbar Link</a></li>
       </ul>
@@ -36,7 +36,7 @@
           <h5 class="header col s12 light">Een leuk, gezellig plein waar evenementen gehouden worden in de zomer!</h5>
         </div>
         <div class="row center">
-          <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Stadspodium</a>
+          <a href="http://www.stadspodium-rotterdam.nl/" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Stadspodium</a>
         </div>
         <br><br>
 
@@ -53,8 +53,8 @@
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Speeds up development</h5>
+            <h2 class="center brown-text"><i class="material-icons">nature_people</i></h2>
+            <h5 class="center">Groener dan ooit!</h5>
 
             <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
           </div>
@@ -63,7 +63,7 @@
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">User Experience Focused</h5>
+            <h5 class="center">Ontmoet meer mensen!</h5>
 
             <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
           </div>
@@ -71,8 +71,8 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Easy to work with</h5>
+            <h2 class="center brown-text"><i class="material-icons">accessibility</i></h2>
+            <h5 class="center">Leuke activiteiten!</h5>
 
             <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
           </div>
@@ -124,8 +124,8 @@
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
+          <h5 class="white-text">Wat is Nijlgans Productions?</h5>
+          <p class="grey-text text-lighten-4">Wij zijn een team van vier studenten die achter de schermen van Nijlgans Productions werken. Wij zorgen ervoor dat op deze website alles naar behoren werkt.</p>
 
 
         </div>
@@ -151,7 +151,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+      Made by <a class="brown-text text-lighten-3" href="http://www.vogelvisie.nl/foto/nijlgans.jpg">Nijlgans Productions</a>
       </div>
     </div>
   </footer>
