Veel gedaan aan website

--- a/website/index.html
+++ b/website/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>grotekerkplein</title>
+    <title>Het Grotekerkplein</title>
     <link href="css/style.css" rel="stylesheet">
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -13,33 +13,33 @@
 </head>
 
 <body>
+  <!-- NAVBAR -->
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container"><img class="img-logo" src="images/nijlgans.png"></a>
+      <a id="logo-container"><img class="img-logo" src="images/rotterdamlogo.png"></a>
       <ul class="right hide-on-med-and-down">
-        <li><a class="navbar-link" href="#">Project Pong</a></li>
+        <li><a class="navbar-link" href="pong.html">Project Pong</a></li>
+        <li><a class="navbar-link" href="nijlgans.html">Nijlgans Productions</a></li>
       </ul>
 
       <ul id="nav-mobile" class="side-nav">
-        <li><a class="navbar-link" href="#">Project Pong</a></li>
+        <li><a class="navbar-link" href="pong.html">Project Pong</a></li>
+        <li><a class="navbar-link" href="nijlgans.html">Nijlgans Productions</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
   </nav>
 
+  <!-- HEADER SECTION HOMEPAGE -->
   <div id="index-banner" class="parallax-container">
     <div class="section no-pad-bot">
-      <div class="container">
+      <div class="container header-section-background">
         <br><br>
         <h1 class="header center teal-text text-lighten-2">Het Grotekerkplein</h1>
         <div class="row center">
           <h5 class="header col s12 light">Een leuk, gezellig plein waar evenementen gehouden worden in de zomer!</h5>
         </div>
-        <div class="row center">
-          <a href="http://www.stadspodium-rotterdam.nl/" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Stadspodium</a>
-        </div>
         <br><br>
-
       </div>
     </div>
     <div class="parallax"><img src="images/background4.jpg" alt="Unsplashed background img 1"></div>
@@ -53,12 +53,7 @@
                 <div class="col s12 center">
                   <h3><i class="mdi-content-send brown-text"></i></h3>
                   <h4>Wat is het Grotekerkplein</h4>
-                  <p class="left-align light">Stadspodium Rotterdam is hét openluchtpodium in het nieuwe Stadspark, voor Rotterdammers en door Rotterdammers.
-                      
-                      Stadspodium Rotterdam is, sinds de opening in 2009, het buitentheater in het hart van Rotterdam. Gelegen aan het Grotekerkplein, voor de Laurenskerk, is het Stadspodium een echte blikvanger. Sinds 2017 is op deze plek een nieuw stadspark verrezen. Het Stadspodium, in het nieuwe Stadspark, is nu een nóg fijnere plek midden in de stad!
-                      
-                      De hele zomer worden allerlei gratis activiteiten voor jong en oud georganiseerd bij het Stadspodium en in het nieuwe Stadspark, zoals meditatie, Kids Kick It, Rotterdam Zingt en sporten. Elke zondag vinden de drukbezochte danssalons plaats, waar Rotterdammers samen met elkaar uiteenlopende dansstijlen dansen op live muziek.
-                      Kom je ook dansen, spelen, picknicken, lezen, bezinnen, bewegen en ontmoeten bij het Stadspodium in het nieuwe Stadspark?</p>
+                  <p class="left-align light"></p>
                 </div>
               </div>
 
@@ -99,12 +94,12 @@
   <div class="parallax-container valign-wrapper">
     <div class="section no-pad-bot">
       <div class="container">
-        <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+        <div class="row center header-section-background">
+          <h5 class="header col s12 light">Bezoek ook dit leuke, vernieuwde plein. Of kom naar één van de leuke evenementen!</h5>
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="images/background5.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="images/background6.jpg" alt="Unsplashed background img 2"></div>
   </div>
 
   <div class="container">
@@ -113,24 +108,12 @@
       <div class="row">
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4>Contact Us</h4>
-          <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+          <h4>Stadspodium</h4>
+          <p class="left-align light">Stadspodium Rotterdam is hét openluchtpodium in het nieuwe Stadspark, voor Rotterdammers en door Rotterdammers. Stadspodium Rotterdam is, sinds de opening in 2009, het buitentheater in het hart van Rotterdam. Gelegen aan het Grotekerkplein, voor de Laurenskerk, is het Stadspodium een echte blikvanger. Sinds 2017 is op deze plek een nieuw stadspark verrezen. Het Stadspodium, in het nieuwe Stadspark, is nu een nóg fijnere plek midden in de stad! De hele zomer worden allerlei gratis activiteiten voor jong en oud georganiseerd bij het Stadspodium en in het nieuwe Stadspark, zoals meditatie, Kids Kick It, Rotterdam Zingt en sporten. Elke zondag vinden de drukbezochte danssalons plaats, waar Rotterdammers samen met elkaar uiteenlopende dansstijlen dansen op live muziek. Kom je ook dansen, spelen, picknicken, lezen, bezinnen, bewegen en ontmoeten bij het Stadspodium in het nieuwe Stadspark?</p>
         </div>
       </div>
 
     </div>
-  </div>
-
-
-  <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
-        </div>
-      </div>
-    </div>
-    <div class="parallax"><img src="images/background6.jpg" alt="Unsplashed background img 3"></div>
   </div>
 
   <footer class="page-footer teal">
@@ -138,23 +121,12 @@
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">Wat is Nijlgans Productions?</h5>
-          <p class="grey-text text-lighten-4">Wij zijn een team van vier studenten die achter de schermen van Nijlgans Productions werken. Wij zorgen ervoor dat op deze website alles naar behoren werkt.</p>
-
-
+          <p class="grey-text text-lighten-4">Wij zijn een team van vier studenten die achter de schermen van Nijlgans Productions werken. Wij zorgen ervoor dat op deze website alles naar behoren werkt. Klik <a href="nijlgans.html"><span class="link-text-visible">hier</span></a> voor meer informatie over dit geweldige team.</p>
         </div>
         <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
+          <h5 class="white-text">Handige websites</h5>
           <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
+            <li><a class="white-text" href="https://www.facebook.com/stadspodiumrotterdam/">Stadspodium Facebook</a></li>
             <li><a class="white-text" href="#!">Link 2</a></li>
             <li><a class="white-text" href="#!">Link 3</a></li>
             <li><a class="white-text" href="#!">Link 4</a></li>
@@ -164,7 +136,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Made by <a class="brown-text text-lighten-3" href="http://www.vogelvisie.nl/foto/nijlgans.jpg">Nijlgans Productions</a>
+      <span>Ontwikkeld door - </span><a class="brown-text text-lighten-3" href="http://www.vogelvisie.nl/foto/nijlgans.jpg">Nijlgans Productions</a>
       </div>
     </div>
   </footer>
