--- a/website/index.html
+++ b/website/index.html
@@ -42,7 +42,7 @@
         <br><br>
       </div>
     </div>
-    <div class="parallax"><img src="images/background4.jpg" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img class="background-image-filter" src="images/background4.jpg" alt="Unsplashed background img 1"></div>
   </div>
 
 
@@ -99,7 +99,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="images/background6.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="images/background6.jpg" class="background-image-filter" alt="Unsplashed background img 2"></div>
   </div>
 
   <div class="container">
