--- a/website/nijlgans.html
+++ b/website/nijlgans.html
@@ -30,6 +30,21 @@
         </div>
       </nav>
 
+    <div class="container">
+    <div class="section">
+
+      <div class="row">
+        <div class="col s12 center">
+          <h3><i class="mdi-content-send brown-text"></i></h3>
+          <h4>Nijlgans Productions</h4>
+          <p class="left-align light">Stadspodium Rotterdam is hét openluchtpodium in het nieuwe Stadspark, voor Rotterdammers en door Rotterdammers. Stadspodium Rotterdam is, sinds de opening in 2009, het buitentheater in het hart van Rotterdam. Gelegen aan het Grotekerkplein, voor de Laurenskerk, is het Stadspodium een echte blikvanger. Sinds 2017 is op deze plek een nieuw stadspark verrezen. Het Stadspodium, in het nieuwe Stadspark, is nu een nóg fijnere plek midden in de stad! De hele zomer worden allerlei gratis activiteiten voor jong en oud georganiseerd bij het Stadspodium en in het nieuwe Stadspark, zoals meditatie, Kids Kick It, Rotterdam Zingt en sporten. Elke zondag vinden de drukbezochte danssalons plaats, waar Rotterdammers samen met elkaar uiteenlopende dansstijlen dansen op live muziek. Kom je ook dansen, spelen, picknicken, lezen, bezinnen, bewegen en ontmoeten bij het Stadspodium in het nieuwe Stadspark?</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+
       <div class="row">
             <div class="col s12 m6">
               <div class="icon-block">
