--- a/webApp/PongWebApp/index.html
+++ b/webApp/PongWebApp/index.html
@@ -73,7 +73,8 @@
     </div>
 </body>
 
-<script type="text/javascript" src="js/main.js"></script>
 <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="js/game.js"></script>
 <script type="text/javascript" src="js/socket.js"></script>
 </html>
