--- a/website/index.html
+++ b/website/index.html
@@ -116,6 +116,30 @@
     </div>
   </div>
 
+  <div class="container">
+      <div class="section">
+  
+          <div id="holder" class="row">
+          </div>
+        </div>
+  
+      </div>
+    </div>
+
+  <div class="container">
+    <div class="section">
+
+      <div class="row">
+        <div class="col s12 center">
+          <input id="city"></input>
+          <button id="getWeatherForcast">Get Weather</button>
+          <div id="showWeatherForcast"></div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
   <footer class="page-footer teal">
     <div class="container">
       <div class="row">
@@ -147,7 +171,18 @@
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="js/materialize.min.js"></script>
 <script src="js/main.js"></script>
+
+<script src="/socket.io/socket.io.js"></script>
+<script>
+  var socket = io();
+
+  socket.on("connect",function() {
+    console.log("Connected to socket")
+
+    socket.emit("hello", "website")
+  })
+</script>
 </body>
 
-</body>
+
 </html>
