API en header responsive

--- a/website/index.html
+++ b/website/index.html
@@ -35,7 +35,7 @@
     <div class="section no-pad-bot">
       <div class="container header-section-background">
         <br><br>
-        <h1 class="header center teal-text text-lighten-2">Het Grotekerkplein</h1>
+        <h1 class="header center teal-text text-lighten-2 page-header">Het Grotekerkplein</h1>
         <div class="row center">
           <h5 class="header col s12 light">Een leuk, gezellig plein waar evenementen gehouden worden in de zomer!</h5>
         </div>
@@ -116,11 +116,26 @@
     </div>
   </div>
 
+  <div class="parallax-container valign-wrapper">
+      <div class="section no-pad-bot">
+        <div class="container">
+          <div class="row center header-section-background">
+            <h5 class="header col s12 light">Er is hier altijd wel iets te doen!(behalve in de winter dan zijn er alleen nijlganzen)</h5>
+          </div>
+        </div>
+      </div>
+      <div class="parallax"><img src="images/background5.jpg" class="background-image-filter" alt="Unsplashed background img 2"></div>
+    </div>
+
   <div class="container">
       <div class="section">
   
-          <div id="holder" class="row">
-          </div>
+          <div class="row">
+              <div class="col s12 center">
+                <h4>Evenementen</h4>
+                <div id="holder"></div>
+              </div>
+            </div>
         </div>
   
       </div>
