--- a/webApp/PongWebApp/index.html
+++ b/webApp/PongWebApp/index.html
@@ -33,10 +33,11 @@
                 <h2>events</h2>
             </div>
             <div id="agenda" class="canvas containerFlex">
-                <p>MA</p> <br>
-                <p>DI</p> <br>
-                <p>WO</p> <br>
-                <p></p>
+                <p class="event">MA</p>
+                <p class="event"> DI</p>
+                <p class="event">WO</p>
+                <p class="event">WO</p>
+                <p class="event">WO</p>
             </div>
     </div>
 
