--- a/website/nijlgans.html
+++ b/website/nijlgans.html
@@ -51,7 +51,7 @@
                 <img src="images/lem.jpg" class="profile-image" alt="Lem">
                 <h5 class="center">Lem</h5>
 
-                <p class="light">Lem is erg goed in het geven van negatieve feedback en lichtelijk aggresieve instructies aan mensen die proberen te programmeren. Verder doet ie alles.</p>
+                <p class="light">Lem is erg goed in het geven van negatieve feedback en lichtelijk aggresieve instructies aan mensen die proberen te programmeren. Verder doet ie alles. En hij is goed in speling</p>
               </div>
             </div>
 
@@ -60,7 +60,7 @@
                     <img src="images/dion.jpg" class="profile-image" alt="Dion">
                 <h5 class="center">Dion</h5>
 
-                <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+                <p class="light">Dion had geen zin om hier iets over zichzelf te schrijven.</p>
               </div>
             </div>
     </div>
