API data layout

--- a/website/index.html
+++ b/website/index.html
@@ -57,7 +57,7 @@
                 </div>
               </div>
 
-      <!--   Icon Section   -->
+      <!--   INFO SECTION   -->
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
@@ -141,7 +141,7 @@
       </div>
     </div>
 
-  <div class="container">
+  <!--<div class="container">
     <div class="section">
 
       <div class="row">
@@ -153,7 +153,7 @@
       </div>
 
     </div>
-  </div>
+  </div>-->
 
   <footer class="page-footer teal">
     <div class="container">
@@ -175,7 +175,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      <span>Ontwikkeld door - </span><a class="brown-text text-lighten-3" href="http://www.vogelvisie.nl/foto/nijlgans.jpg">Nijlgans Productions</a>
+      <span>Ontwikkeld door - </span><a class="brown-text text-lighten-3" href="http://www.vogelvisie.nl/foto/nijlgans.jpg" target="blank">Nijlgans Productions</a>
       </div>
     </div>
   </footer>
