--- a/website/nijlgans.html
+++ b/website/nijlgans.html
@@ -51,7 +51,7 @@
                 <img src="images/lem.jpg" class="profile-image" alt="Lem">
                 <h5 class="center">Lem</h5>
 
-                <p class="light">Lem is erg goed in het geven van negatieve feedback en lichtelijk aggresieve instructies aan mensen die proberen te programmeren. Verder doet ie alles. En hij is goed in speling</p>
+                <p class="light center-align">Lem is erg goed in het geven van negatieve feedback en lichtelijk aggresieve instructies aan mensen die proberen te programmeren. Verder doet ie alles. En hij is goed in speling</p>
               </div>
             </div>
 
@@ -60,7 +60,7 @@
                     <img src="images/dion.jpg" class="profile-image" alt="Dion">
                 <h5 class="center">Dion</h5>
 
-                <p class="light">Dion had geen zin om hier iets over zichzelf te schrijven.</p>
+                <p class="light center-align">Dion had geen zin om hier iets over zichzelf te schrijven.</p>
               </div>
             </div>
     </div>
@@ -71,7 +71,7 @@
                     <img src="images/martijn.jpg" class="profile-image" alt="Martijn">
                 <h5 class="center">Martijn</h5>
 
-                <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+                <p class="light center-align">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
               </div>
             </div>
 
@@ -80,7 +80,7 @@
                         <img src="images/berend.jpg" class="profile-image" alt="Lem">
                     <h5 class="center">Berend</h5>
 
-                    <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+                    <p class="light center-align">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
                 </div>
             </div>
           </div>
