webApp update, gameString

--- a/webApp/PongWebApp/index.html
+++ b/webApp/PongWebApp/index.html
@@ -58,19 +58,20 @@
     </div>
 
     <div id="playButton" class="wrapperFooter">
-        <div id="footerContent" class="footer">
-            <h2>PLAY</h2>
+        <div class="footer">
+            <h2 id="footerContent">PLAY</h2>
         </div>
     </div>
 
-    <div id="gamemodeButtons" class="wrapperFooter">
+    <!--<div id="gamemodeButtons" class="wrapperFooter">
             <div id="classic" class="footerFlex">
                 <h2>classic</h2>
             </div>
-
+            
             <div id="coop" class="footerFlex">
                 <h2>co-op</h2>
             </div>
+            -->
     </div>
 </body>
 
