--- a/webApp/PongWebApp/index.html
+++ b/webApp/PongWebApp/index.html
@@ -33,11 +33,12 @@
                 <h2>events</h2>
             </div>
             <div id="agenda" class="canvas containerFlex">
-                <p class="event">MA</p>
-                <p class="event"> DI</p>
+                <!--<p class="event">MA</p>
+                <p class="event">DI</p>
                 <p class="event">WO</p>
                 <p class="event">WO</p>
-                <p class="event">WO</p>
+                <p class="event">WO</p>-->
+                <div id="holder"></div>
             </div>
     </div>
 
