--- a/dots/index.html
+++ b/dots/index.html
@@ -6,38 +6,59 @@
 		<script type="text/javascript" src="/socket.io/socket.io.js"></script>
 		<script src="script.js"></script>
 
+		<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 		<style media="screen">
 			body {
 				margin: 0;
-				background: #000;
+				background: #117101;
+				overflow: hidden;
 			}
 
 			section {
-				position: absolute;
-				left: 50%;
+				position: relative;
+				left: calc(50%);
 				transform: translateX(-50%);
-				top: 0;
-				height: 100vh;
-				width: 133.33333333333333vh;
-				padding: 10vh;
+				top: 10vh;
+				height: 70vh;
+				width: 100vh;
 				box-sizing: border-box;
 			}
 
 			div {
-				background: #fff;
-				position: fixed;
-				width: 10vh;
-				height: 10vh;
+				background: #C7C7C7;
+				position: absolute;
+				width: 5vh;
+				height: 5vh;
 				border-radius: 100vh;
-				box-shadow: 0px 0px 3vh 3vh #fff;
+				z-index: 100;
+				box-shadow: 0px 0px 1vh 1vh #C7C7C7;
 			}
 
-			div:first-child, div:last-child {
-				height: 40vh;
+			div:first-child, div:last-of-type {
+				height: 20vh;
 			}
 
-			div:last-child {
+			div:first-child {
+				left: 0;
+			}
+
+			div:last-of-type {
 				right: 0;
+			}
+
+			span {
+			    font-family: 'Press Start 2P', cursive;
+				font-size: 5vh;
+				text-transform: uppercase;
+				position: absolute;
+				z-index: 1;
+				top: 50%;
+				left: 50%;
+				text-align: center;
+				display: block;
+				color: rgba(66,255,0,.09);
+				transform: translate(-50%, -50%) rotate(180deg);
+				text-shadow: 0px 0px 1vh 1vh rgba(27,247,0,.14);
 			}
 		</style>
 	</head>
@@ -46,6 +67,10 @@
 			<div id="left"></div>
 			<div id="ball"></div>
 			<div id="right"></div>
+			<span>
+				Grotekerkplein<br />
+				Rotterdam
+			</span>
 		</section>
 	</body>
 </html>
