--- a/website/index.html
+++ b/website/index.html
@@ -120,7 +120,7 @@
       <div class="section no-pad-bot">
         <div class="container">
           <div class="row center header-section-background">
-            <h5 class="header col s12 light">Er is hier altijd wel iets te doen!(behalve in de winter dan zijn er alleen nijlganzen)</h5>
+            <h5 class="header col s12 light">Er is hier altijd wel iets te doen! (behalve in de winter dan zijn er alleen nijlganzen)</h5>
           </div>
         </div>
       </div>
@@ -133,6 +133,7 @@
           <div class="row">
               <div class="col s12 center">
                 <h4>Evenementen</h4>
+                <p class="center light">Hieronder zijn alle evenementen te vinden op Het Grotekerkplein.</p>
                 <div id="holder"></div>
               </div>
             </div>
@@ -198,6 +199,4 @@
   })
 </script>
 </body>
-
-
 </html>
