--- a/website/nijlgans.html
+++ b/website/nijlgans.html
@@ -36,10 +36,13 @@
       <div class="row">
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4>Nijlgans Productions</h4>
-          <p class="left-align light">Stadspodium Rotterdam is hét openluchtpodium in het nieuwe Stadspark, voor Rotterdammers en door Rotterdammers. Stadspodium Rotterdam is, sinds de opening in 2009, het buitentheater in het hart van Rotterdam. Gelegen aan het Grotekerkplein, voor de Laurenskerk, is het Stadspodium een echte blikvanger. Sinds 2017 is op deze plek een nieuw stadspark verrezen. Het Stadspodium, in het nieuwe Stadspark, is nu een nóg fijnere plek midden in de stad! De hele zomer worden allerlei gratis activiteiten voor jong en oud georganiseerd bij het Stadspodium en in het nieuwe Stadspark, zoals meditatie, Kids Kick It, Rotterdam Zingt en sporten. Elke zondag vinden de drukbezochte danssalons plaats, waar Rotterdammers samen met elkaar uiteenlopende dansstijlen dansen op live muziek. Kom je ook dansen, spelen, picknicken, lezen, bezinnen, bewegen en ontmoeten bij het Stadspodium in het nieuwe Stadspark?</p>
+          <h4 class="center">Over ons team</h4>
+          <h5 class="center light">Nijlgans Productions</h2>
+          <p class="center light">Wij als het team achter Nijlgans Productions werken elke dag </p>
         </div>
       </div>
+
+      
 
     </div>
   </div>
@@ -49,7 +52,7 @@
             <div class="col s12 m6">
               <div class="icon-block">
                 <img src="images/lem.jpg" class="profile-image" alt="Lem">
-                <h5 class="center">Lem</h5>
+                <h5 class="center light">Lem</h5>
 
                 <p class="light center-align">Lem is erg goed in het geven van negatieve feedback en lichtelijk aggresieve instructies aan mensen die proberen te programmeren. Verder doet ie alles. En hij is goed in speling</p>
               </div>
@@ -58,7 +61,7 @@
             <div class="col s12 m6">
               <div class="icon-block">
                     <img src="images/dion.jpg" class="profile-image" alt="Dion">
-                <h5 class="center">Dion</h5>
+                <h5 class="center light">Dion</h5>
 
                 <p class="light center-align">Dion had geen zin om hier iets over zichzelf te schrijven.</p>
               </div>
@@ -69,7 +72,7 @@
             <div class="col s12 m6">
               <div class="icon-block">
                     <img src="images/martijn.jpg" class="profile-image" alt="Martijn">
-                <h5 class="center">Martijn</h5>
+                <h5 class="center light">Martijn</h5>
 
                 <p class="light center-align">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
               </div>
@@ -78,12 +81,30 @@
             <div class="col s12 m6">
                 <div class="icon-block">
                         <img src="images/berend.jpg" class="profile-image" alt="Lem">
-                    <h5 class="center">Berend</h5>
+                    <h5 class="center light">Berend</h5>
 
                     <p class="light center-align">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
                 </div>
             </div>
           </div>
+
+          <div class="container">
+            <div class="section">
+        
+
+          <div class="row">
+            <div class="col s12 center">
+              <h3><i class="mdi-content-send brown-text"></i></h3>
+              <h4>Over ons werk</h4>
+              <h5 class="center light">ongepland</h5>
+              <p class="center light">Wij als het team achter Nijlgans Productions werken elke dag </p>
+              <h5 class="center light">ongeorganiseerd</h5>
+              <p class="center light">Wij als het team achter Nijlgans Productions werken elke dag </p>
+            </div>
+          </div>
+
+        </div>
+      </div>
 
       <footer class="page-footer teal">
             <div class="container">
@@ -101,7 +122,7 @@
             </div>
             <div class="footer-copyright">
               <div class="container">
-              <span>Ontwikkeld door - </span><a class="brown-text text-lighten-3" href="http://www.vogelvisie.nl/foto/nijlgans.jpg">Nijlgans Productions</a>
+              <span>Ontwikkeld door - </span><a class="brown-text text-lighten-3" href="http://www.vogelvisie.nl/foto/nijlgans.jpg" target="blank">Nijlgans Productions</a>
               </div>
             </div>
           </footer>
