--- a/website/index.html
+++ b/website/index.html
@@ -133,7 +133,7 @@
           <div class="row">
               <div class="col s12 center">
                 <h4>Evenementen</h4>
-                <p class="center light">Hieronder zijn alle evenementen te vinden op Het Grotekerkplein.</p>
+                <p class="center light">Hieronder zijn alle evenementen te vinden op het Grotekerkplein.</p>
                 <div id="holder"></div>
               </div>
             </div>
