--- a/website/pong.html
+++ b/website/pong.html
@@ -35,10 +35,33 @@
     
           <div class="row">
             <div class="col s12 center">
-              <h3><i class="mdi-content-send brown-text"></i></h3>
               <h4 class="center">Project Pong</h4>
               <h5 class="center light">Levend Pong spelen op het Grotekerkplein Rotterdam</h2>
               <p class="left-align light">Project Pong is in het leven geroepen nadat wij van de Hogeschool Rotterdam de opdracht hebben gekregen om een leuke interactieve installatie te bouwen op een plein in Rotterdam. Als team Nijlgans Productions hebben wij het Grotekerkplein in Rotterdam aangewezen gekregen om iets leuks voor te bedenken en dit op schaal uit te voeren.</p>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+          <div class="parallax-container valign-wrapper">
+            <div class="section no-pad-bot">
+              <div class="container">
+                <div class="row center header-section-background">
+                  <h5 class="header col s12 light">Er is hier altijd wel iets te doen! (behalve in de winter dan zijn er alleen nijlganzen)</h5>
+                </div>
+              </div>
+            </div>
+            <div class="parallax"><img src="images/background5.jpg" class="background-image-filter" alt="Unsplashed background img 2"></div>
+          </div>
+
+          <div class="container">
+            <div class="section">
+
+          <div class="row">
+            <div class="col s12 center">
+              <h5 class="center light">Het concept</h2>
+              <p class="left-align light"></p>
             </div>
           </div>
     
@@ -74,6 +97,15 @@
 <!--Import jQuery before materialize.js-->
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="js/materialize.min.js"></script>
-<script src="js/main.js"></script>
+<script>
+(function($){
+  $(function(){
+  
+      $('.button-collapse').sideNav();
+      $('.parallax').parallax();
+  
+  }); // end of document ready
+  })(jQuery); // end of jQuery name space
+</script>
 </body>
 </html>
