Twitch stream & teksten aangepast

--- a/website/index.html
+++ b/website/index.html
@@ -64,7 +64,7 @@
             <h2 class="center brown-text"><i class="material-icons">nature_people</i></h2>
             <h5 class="center">Groener dan ooit!</h5>
 
-            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+            <p class="light">Het park is tegenwoordig groener dan dat het ooit was! Het Grotekerkplein is in 2017 helemaal aangepast zodat het van een plein meer naar een park is gegaan. Dit heeft ervoor gezorg dat het plein een gezellige sfeer heeft gekregen.</p>
           </div>
         </div>
 
@@ -73,7 +73,7 @@
             <h2 class="center brown-text"><i class="material-icons">group</i></h2>
             <h5 class="center">Ontmoet meer mensen!</h5>
 
-            <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+            <p class="light"></p>
           </div>
         </div>
 
@@ -82,7 +82,7 @@
             <h2 class="center brown-text"><i class="material-icons">accessibility</i></h2>
             <h5 class="center">Leuke activiteiten!</h5>
 
-            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+            <p class="light">Op het Grotekerkplein staat het stadspodium van Rotterdam. Hier zijn in de lente, zomer en in de herfst leuke evenementen om te beleven. Dit kunnen activiteiten zijn voor jong en oud dus het is zeker leuk om eens langs te komen.</p>
           </div>
         </div>
       </div>
@@ -167,9 +167,8 @@
           <h5 class="white-text">Handige websites</h5>
           <ul>
             <li><a class="white-text" href="https://www.facebook.com/stadspodiumrotterdam/">Stadspodium Facebook</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
+            <li><a class="white-text" href="http://www.stadspodium-rotterdam.nl/">Stadspodium Website</a></li>
+            <li><a class="white-text" href="https://www.twitch.tv/boltgolt">Pong on Twitch</a></li>
           </ul>
         </div>
       </div>
