--- a/website/nijlgans.html
+++ b/website/nijlgans.html
@@ -121,9 +121,8 @@
                   <h5 class="white-text">Handige websites</h5>
                   <ul>
                     <li><a class="white-text" href="https://www.facebook.com/stadspodiumrotterdam/">Stadspodium Facebook</a></li>
-                    <li><a class="white-text" href="#!">Link 2</a></li>
-                    <li><a class="white-text" href="#!">Link 3</a></li>
-                    <li><a class="white-text" href="#!">Link 4</a></li>
+                    <li><a class="white-text" href="http://www.stadspodium-rotterdam.nl/">Stadspodium Website</a></li>
+                    <li><a class="white-text" href="https://www.twitch.tv/boltgolt">Pong on Twitch</a></li>
                   </ul>
                 </div>
               </div>
