Twitch mobile friendly + meer teksten

--- a/website/index.html
+++ b/website/index.html
@@ -73,7 +73,7 @@
             <h2 class="center brown-text"><i class="material-icons">group</i></h2>
             <h5 class="center">Ontmoet meer mensen!</h5>
 
-            <p class="light"></p>
+            <p class="light">Elke dag zijn er honderden leuke mensen te vinden! Dit is een plek waar iedereen samen kan komen om te genieten van de dag. Kom ook gezellig een keer langs en ontmoet veel nieuwe mensen.</p>
           </div>
         </div>
 
