--- a/website/pong.html
+++ b/website/pong.html
@@ -59,8 +59,8 @@
             <div class="section">
 
               <div class="row">
-                <div class="col s12 center">
-                  <div id="twitch-embed"></div>
+                <div class="col s12 center twitch">
+                  <div id="twitch-embed" style="height: 720px;"></div>
                 </div>
               </div>
 
@@ -115,9 +115,10 @@
 </script>
 <script type="text/javascript">
   new Twitch.Embed("twitch-embed", {
-    width: 1280,
-    height: 720,
-    channel: "boltgolt"
+    width: '100%',
+    height: "100%",
+    channel: "boltgolt",
+    theme: "dark"
   });
 </script>
 </body>
